compiling_error.txt
C:\Users\otaco\Desktop\DevProjects\MBNexus\main.c:1:10: error: #include expects "FILENAME" or <FILENAME>
 #include stdio.h
          ^~~~~
C:\Users\otaco\Desktop\DevProjects\MBNexus\main.c: In function 'main':
C:\Users\otaco\Desktop\DevProjects\MBNexus\main.c:4:3: warning: implicit declaration of function 'fprint' [-Wimplicit-function-declaration]
   fprint ("Hello World!")
   ^~~~~~
C:\Users\otaco\Desktop\DevProjects\MBNexus\main.c:5:3: error: expected ';' before 'return'
   return 0;
   ^~~~~~
